# Asset-jun-bot

./: .env.example  .gitignore  GEMINI.md  README.md  ecosystem.config.js  main.py  pyproject.toml
.agents/skills/asset-advisor/: SKILL.md
.agents/skills/asset-advisor/references/: investment-principles.md
.agents/skills/investment-principles/: SKILL.md
.agents/skills/korea-daily-index-report/: SKILL.md
.agents/skills/korea-weekly-index-report/: SKILL.md
.agents/skills/us-daily-index-report/: SKILL.md
.agents/skills/us-weekly-index-report/: SKILL.md
.github/workflows/: deploy.yml
scripts/: get_storage_dir.py  markdown_to_pdf.py  pdf_style.css  query_asset.py  query_market.py  query_news.py  query_stock.py  query_us_news.py  resolve_url.py  send_telegram.py
skills/korea-daily-index-report/: SKILL.md
src/: agent_runner.py  asset_client.py  config.py  telegram_bot.py
src/asset_jun_bot/: agent_runner.py  asset_client.py  chat_history_manager.py  config.py  logging_config.py  main.py  naver_news.py  telegram_bot.py
tests/: test_agent_runner.py  test_asset_client.py  test_asset_client_integration.py  test_chat_history_manager.py  test_config.py  test_get_storage_dir.py  test_logging_config.py  test_naver_news.py  test_query_asset.py  test_query_market.py  test_query_news.py  test_query_us_news.py  test_telegram_bot.py
work/: holiday_backend_api_spec.md  market_indices_backend_api_spec.md
