[project]
name = "asset-jun-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-antigravity>=0.1.3",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "python-dotenv>=1.2.2",
    "xhtml2pdf>=0.2.17",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
asset-jun-bot = "asset_jun_bot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/asset_jun_bot"]
